--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,10 +27,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.sha }}
-        draft: false
-        prerelease: false
+        tag_name: ${{ steps.tag_version.outputs.new_tag }}
+        release_name: Release ${{ steps.tag_version.outputs.new_version }}
     - name: Upload model.keras to Release
       uses: actions/upload-release-asset@v1
       env:
