--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,16 +11,26 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
     - name: Run pytest
       run: |
         pytest test_train.py
+        
     - name: Execute main.py script
       run: |
         python main.py
+        
+    - name: Bump version and push tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v5.6
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -29,6 +39,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag_version.outputs.new_tag }}
         release_name: Release ${{ steps.tag_version.outputs.new_version }}
+        
     - name: Upload model.keras to Release
       uses: actions/upload-release-asset@v1
       env:
