--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,37 +1,44 @@
-name: Python Application Workflow
+name: Model Release Workflow
 
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.10'
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
     - name: Run unit tests
       run: |
-        pytest
+        pytest test_train.py
+        
     - name: Execute main.py
       run: |
         python main.py
+        
     - name: Upload model.keras
       uses: actions/upload-artifact@v2
       with:
         name: model
         path: model.keras
+        
     - name: Create Release
       uses: marvinpinto/action-automatic-releases@latest
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
         prerelease: false
-        title: "New Release"
+        title: "Model"
         files: |
           model.keras
